update route logic
